<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d9e5eb"
    android:gravity="top"
    tools:context=".DisplayReview">
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tableLayout1">
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow1">
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView1"
                android:textColor="#000000" android:text="@string/Name"></TextView>
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:textColor="#000000" android:text="@string/TextView"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow2">
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:id="@+id/textView3" android:textColor="#000000" android:text="@string/Genre"
                android:layout_height="wrap_content"></TextView>
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textColor="#000000" android:text="@string/TextView"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow3">
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:textColor="#000000" android:text="@string/yr"></TextView>
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:textColor="#000000" android:text="@string/TextView"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow4">
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:textColor="#000000" android:text="@string/Dur"></TextView>
            <TextView android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/textView8"
                android:textColor="#000000" android:text="@string/TextView"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow6">
            <TextView android:textColor="#000000" android:id="@+id/textView11"
                android:text="@string/Starcast" android:layout_width="wrap_content"
                android:layout_weight="1" android:layout_height="wrap_content"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/textView12"
                android:text="@string/TextView" android:layout_width="wrap_content"
                android:layout_weight="1" android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tableRow7">
            <TextView android:textColor="#000000" android:id="@+id/textView13"
                android:text="@string/dr" android:layout_width="wrap_content" android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/textView14"
                android:text="@string/TextView" android:layout_width="wrap_content"
                android:layout_weight="1" android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tableLayout2">
    </TableLayout>
    <RatingBar android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ratingBar1"></RatingBar>
    <TextView android:textColor="#000000" android:id="@+id/textView9"
        android:text="@string/Review" android:layout_height="wrap_content"
        android:layout_width="wrap_content"></TextView>
    <TextView android:textColor="#000000" android:id="@+id/textView10"
        android:text="@string/TextView" android:layout_height="wrap_content"
        android:layout_width="wrap_content"></TextView>
</LinearLayout>